# pynukez

./: .env  .gitignore  CONTRIBUTING.md  EVM_SVM_Owners.ipynb  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: API.md  MCP_RENDERER_CONTRACT.md  PYNUKEZ_PAGE_PROMPT.md  QUICKSTART.md  SDK_REFERENCE.md  TOOL_PATTERN.md
examples/: examples_basic.py  examples_llm_tools.py  examples_persistent_agent.py
pynukez/: __init__.py  __main__.py  _async_client.py  _async_http.py  _helpers.py  _http.py  auth.py  cli.py  client.py  discovery.py  errors.py  evm_payment.py  hardening.py  payment.py  py.typed  signer.py  types.py
pynukez.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  test_async_client.py  test_async_http_client.py  test_auth.py  test_bind_receipt.py  test_client_methods.py  test_errors.py  test_evm_utils.py  test_hardening.py  test_http_client.py  test_operator_delegation.py  test_payment_utils.py  test_signer.py  test_types.py
